--- a/Module01/ex00/Makefile
+++ b/Module01/ex00/Makefile
@@ -13,7 +13,7 @@ CXX := c++
 PATH_PREFIX := ex00/
 OBJS_PREFIX := ex00/objs/
 
-SRC_FILES := main.cpp Shovel.cpp Worker.cpp Tool.cpp Hammer.cpp
+SRC_FILES := main.cpp Shovel.cpp Worker.cpp Tool.cpp Hammer.cpp Workshop.cpp
 SRCS := $(addprefix $(PATH_PREFIX),$(SRC_FILES))
 
 OBJS := $(SRCS:$(PATH_PREFIX)%.cpp=$(OBJS_PREFIX)%.o)
